@@ -745,41 +745,34 @@ within the folder of the current track, or within its parent folder. If no image
           </widget>
          </item>
          <item row="2" column="0" colspan="2">
-          <widget class="QCheckBox" name="groupMultiple">
-           <property name="text">
-            <string>Group multiple artist albums under 'Various Artists'</string>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="0" colspan="2">
           <widget class="QCheckBox" name="fetchCovers">
            <property name="text">
             <string>Fetch missing covers from Last.fm</string>
            </property>
           </widget>
          </item>
-         <item row="4" column="0" colspan="2">
+         <item row="3" column="0" colspan="2">
           <widget class="QCheckBox" name="cacheScaledCovers">
            <property name="text">
             <string>Cache scaled covers</string>
            </property>
           </widget>
          </item>
-         <item row="5" column="0" colspan="2">
+         <item row="4" column="0" colspan="2">
           <widget class="QCheckBox" name="showDeleteAction">
            <property name="text">
             <string>Show delete action in context menus</string>
            </property>
           </widget>
          </item>
-         <item row="6" column="0" colspan="2">
+         <item row="5" column="0" colspan="2">
           <widget class="QCheckBox" name="forceSingleClick">
            <property name="text">
             <string>Enforce single-click activation of items</string>
            </property>
           </widget>
          </item>
-         <item row="7" column="0">
+         <item row="6" column="0">
           <widget class="BuddyLabel" name="langLabel">
            <property name="text">
             <string>Language:</string>
@@ -789,7 +782,7 @@ within the folder of the current track, or within its parent folder. If no image
            </property>
           </widget>
          </item>
-         <item row="7" column="1">
+         <item row="6" column="1">
           <widget class="QComboBox" name="lang"/>
          </item>
         </layout>
